--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,12 +22,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
     <title>Matcha</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     
-    <div id="root">
+    <div id="root"> 
       
     </div>
     <!--
