--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,9 +29,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     
-    <div id="root"> 
+    <section id="root">
       
-    </div>
+    </section>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
