--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
+    
+    <!-- Material UI dependencies --> 
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- /Material UI dependencies -->
+  
     <title>Matcha</title>
   </head>
   <body>
